--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
                 <!-- Research Topics -->
                 <div class="col-md-3", style="padding-top: 25px">
                     <font color="black"><b>Research Topics:</b><br>
-                        <a>Generative Modeling</a> <br>
                         <a>Digital Health</a> <br>
+                        <a>Generative AI</a> <br>
+                        <a>Bioinformatics</a> <br>
                         <a>Computer Vision</a> <br>
                         <a>Smart Grid</a> <br>
                         <a>Data Visualization</a> <br>
@@ -97,9 +98,7 @@
         <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
             <h3 id="news" style="padding-top: 80px; margin-top: -80px;">News</h3>
             <ul>
-                <li>Started working at Houston Methodist as a Research Assistant in June 2023.</li>
-                <li>Completed Master of Data Science degree from Rice University in May 2023.</li>
-                <li>Completed Bachelor of Electrical Engineering degreee from University of Electronic Science and Technology of China in May 2021.</li>
+                <li>Website published.</li>
             </ul>
         </div>
 
@@ -183,9 +182,13 @@
             <div class="row">
                 <div class="col-md-12">
                     <b><font color="black">Graduate Teaching Assistant</font></b><br>
+                    <div class="work-info">
+                        <div class="employer">Rice University, Houston, TX</div>
+                        <div class="period">Feb. 2022 - May 2023</div>
+                    </div>
                     <ul>
                         <li>
-                            <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Data Visualization</a> (COMP 665, Graduate Level, Rice University) <br>
+                            <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Data Visualization</a> (COMP 665, Graduate Level) <br>
                             Term: Spring 2023, Fall 2022, Summer 2022, Spring 2022 <br>
                             Instructor: <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Dr. Joe Warren</a>, 
                             <a href="https://profiles.rice.edu/faculty/marmar-orooji" target="_blank">Dr. Marmar Orooji</a>
@@ -198,9 +201,13 @@
             <div class="row">
                 <div class="col-md-12">
                     <b><font color="black">Graduate Academic Tutor</font></b><br>
+                    <div class="work-info">
+                        <div class="employer">Rice University, Houston, TX</div>
+                        <div class="period">Sep. 2022 - Dec. 2022</div>
+                    </div>
                     <ul>
                         <li>
-                            <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level, Rice University) <br>
+                            <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level) <br>
                             Term: Fall 2022 <br>
                             Instructor: <a href="https://profiles.rice.edu/faculty/su-chen" target="_blank">Dr. Su Chen</a>
                         </li>
@@ -216,26 +223,20 @@
             <!-- Item -->
             <div class="row">
                 <div class="col-md-12">
-                    <b><font color="black">Graduate Academic Tutor</font></b><br>
+                    <b><font color="black">Research Assistant</font></b><br>
+                    <div class="work-info">
+                        <div class="employer">Houston Methodist Hospital, Houston, TX</div>
+                        <div class="period">June 2023 - Present</div>
+                    </div>
                     <ul>
                         <li>
-                            <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level, Rice University) <br>
-                            Term: Fall 2022 <br>
-                            Instructor: <a href="https://profiles.rice.edu/faculty/su-chen" target="_blank">Dr. Su Chen</a>
+                            Medical image analysis
                         </li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- Item -->
-            <div class="row">
-                <div class="col-md-12">
-                    <b><font color="black">Graduate Academic Tutor</font></b><br>
-                    <ul>
                         <li>
-                            <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level, Rice University) <br>
-                            Term: Fall 2022 <br>
-                            Instructor: <a href="https://profiles.rice.edu/faculty/su-chen" target="_blank">Dr. Su Chen</a>
+                            Genetic data analysis
+                        </li>
+                        <li>
+                            Web development
                         </li>
                     </ul>
                 </div>
@@ -251,11 +252,15 @@
             </ul>
         </div>
 
-        <!-- Interests -->
+        <!-- Misc. -->
         <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
-            <h3 id="interests" style="padding-top: 80px; margin-top: -80px;">Interests</h3>
-            I like basketball, both playing and watching games. I also enjoy playing chess, and I won national junior Chinese chess tournament in 2009.
-            I also like reading books in the topics of history and philosophy.
+            <h3 id="misc" style="padding-top: 80px; margin-top: -80px;">Misc.</h3>
+            
+            <p>
+                I have a love for basketball, both playing it and watching games. 
+                I also find great pleasure in playing Chinese chess, and it's worth mentioning that I clinched victory in the national junior Chinese chess tournament back in 2009.
+                My favorite author is Plato, renowned for crafting influential works such as <i>Republic</i>, <i>Apology</i>, and <i>Symposium</i>.
+            </p>
         </div>
 
         <!-- Contact -->
