--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <!-- Photo -->
                 <div class="col-md-3", style="padding-top: 25px">
-                    <img class="img-responsive img-rounded" src="assets/photos/tom.jpg" alt="poor tom" style="max-width: 100%"><br>
+                    <img class="img-responsive img-rounded" src="assets/photos/tom.png" alt="poor tom" style="max-width: 100%"><br>
                 </div>
 
                 <!-- Intro -->
