--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- Item -->
     <div class="row">
       <div class="col-md-3">
-        <img src="materials/pictures/ddpm.png" alt="ddpm">
+        <img src="materials/pictures/ddpm.png" alt="ddpm" width="100%" height="150px">
       </div>
       <div class="col-md-9">
         <b>
@@ -118,7 +118,7 @@
     <!-- Item -->
     <div class="row">
       <div class="col-md-3">
-        <img src="materials/pictures/admm.png" alt="ddpm">
+        <img src="materials/pictures/admm.png" alt="admm" width="100%" height="150px">
       </div>
       <div class="col-md-9">
         <b>
@@ -142,7 +142,7 @@
     <!-- Item -->
     <div class="row">
       <div class="col-md-3">
-        <img src="materials/pictures/plotnet.png" alt="plotnet">
+        <img src="materials/pictures/plotnet.png" alt="plotnet" width="100%" height="150px">
       </div>
       <div class="col-md-9">
         <b>
@@ -157,7 +157,7 @@
     <!-- Item -->
     <div class="row">
       <div class="col-md-3">
-        <img src="materials/pictures/audubon.png" alt="plotnet">
+        <img src="materials/pictures/audubon.png" alt="plotnet" width="100%" height="150px">
       </div>
       <div class="col-md-9">
         <b>
