--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
         and
         <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a><br>
-        <b><a href="" target="_blank">arXiv 2023</a></b> <br>
+        Submitted to IEEE Sensors Journal <br>
         <a href="" target="_blank"> <small>[Paper]</small></a>
       </div>
     </div><hr>
