--- a/index.html
+++ b/index.html
@@ -214,10 +214,9 @@
 
     <p>
       I have a love for basketball, both playing it and watching games.
-      I also find great pleasure in playing Chinese chess, and it's worth mentioning that I clinched victory in the
-      national junior Chinese chess tournament back in 2009.
-      My favorite author is Plato, renowned for crafting influential works such as <i>Republic</i>, <i>Apology</i>, and
-      <i>Symposium</i>.
+      I also find great pleasure in playing Chinese chess, and it's worth mentioning that I won the championship of the
+      national junior Chinese chess tournament in 2009. My favorite author is Plato, renowned for crafting influential works such as 
+      <i>Republic</i>, <i>Apology</i>, and <i>Symposium</i>.
     </p>
   </div>
 
