--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>
           Zeyu Yang earned his master of data science degree from Rice University in 2023, under the mentorship  of
           Professor <a href="https://akanesano.rice.edu/" target="_blank">Akane Sano</a>
-          and <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
+          and Professor <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
           interest is machine learning, with a focus on generative modeling and digital health. During his
           undergraduate, he worked closely with Professor <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a> 
           in optimization and energy systems.
