--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">Network-aware asynchronous distributed ADMM algorithm for smart home P2P energy
+          <font color="black">Network-aware asynchronous distributed ADMM algorithm for smart home peer-to-peer energy
             trading under imperfect communication</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
         and
         <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a><br>
-        Submitted to IEEE Sensors Journal <br>
-        <a href="" target="_blank"> <small>[Paper]</small></a>
+        Preprint (submitted to IEEE Sensors Journal) <br>
+        <a href="https://arxiv.org/abs/2312.06976" target="_blank"> <small>[Paper]</small></a>
       </div>
     </div><hr>
 
