--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="col-md-9">
         <b>
           <font color="black">Network-aware asynchronous distributed ADMM algorithm for smart home peer-to-peer energy
-            trading under imperfect communication</font>
+            trading</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
         and
