--- a/index.html
+++ b/index.html
@@ -61,23 +61,13 @@
           <a href="https://twitter.com/YangZeyu9" target="_blank">Twitter</a>
         </p>
       </div>
-
-      <!-- Research Topics -->
-      <!-- <div class="col-md-3" , style="padding-top: 25px">
-        <font color="black"><b>Research Topics:</b><br>
-          <a>Machine Learning</a> <br>
-          <a>Generative Modeling</a> <br>
-          <a>Digital Health</a> <br>
-          <a>Data Visualization</a> <br>
-        </font>
-      </div> -->
     </div>
 
     <!-- Short Bio -->
     <div class="row">
       <div class="col-md-12" style="padding-top: 25px;">
         <p>
-          Zeyu Yang earned his master of data science degree from Rice University in 2023, under the mentorship  of
+          Zeyu Yang earned his master of data science degree from Rice University in 2023 under the mentorship  of
           Professor <a href="https://akanesano.rice.edu/" target="_blank">Akane Sano</a>
           and Professor <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
           interest is machine learning, with a focus on generative modeling and digital health. During his
