--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#publication">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#software">Software</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#teaching">Teaching</a>
@@ -70,7 +70,7 @@
           Zeyu Yang earned his master of data science degree from Rice University in 2023 under the mentorship  of
           Professor <a href="https://akanesano.rice.edu/" target="_blank">Akane Sano</a>
           and Professor <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
-          interest is machine learning, with a focus on generative modeling and digital health. During his
+          interest is machine learning with a focus on digital health. During his
           undergraduate, he worked closely with Professor <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a> 
           in optimization and energy systems.
         </p>
@@ -82,7 +82,6 @@
   <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
     <h3 id="publication" style="padding-top: 80px; margin-top: -50px;">
       Publications
-      <!-- <span style="float:right;"><a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en" target="_blank">[Full List]</a></span> -->
     </h3><hr>
 
     <!-- Item -->
@@ -92,14 +91,13 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">Balanced mixed-type tabular data synthesis with diffusion models</font>
+          <font color="black">Balanced Mixed-Type Tabular Data Synthesis with Diffusion Models</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>,
         <a href="https://www.linkedin.com/in/peikun-guo-2b911812b" target="_blank"> Peikun Guo </a>,
         <a href="https://scholar.google.com/citations?user=T7hl27wAAAAJ&hl=en" target="_blank">Khadija Zanna</a>,
         and
         <a href="https://akanesano.rice.edu" target="_blank">Akane Sano</a><br>
-        <!-- <b><a href="https://roboticsconference.org/" target="_blank">arXiv 2023</a></b> <br> -->
         In prepration <br>
         <a href="https://zeyuyang8.github.io/comp-fair/" target="_blank"> <small>[Website]</small></a>
       </div>
@@ -112,8 +110,8 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">Network-aware asynchronous distributed ADMM algorithm for smart home peer-to-peer energy
-            trading</font>
+          <font color="black">Network-Aware Asynchronous Distributed ADMM Algorithm for Smart Home Peer-to-Peer Energy
+            Trading</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
         and
@@ -122,12 +120,12 @@
         <a href="https://arxiv.org/abs/2312.06976" target="_blank"> <small>[Paper]</small></a>
       </div>
     </div><hr>
-
+  
   </div>
 
-  <!-- Projects -->
+  <!-- Software -->
   <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
-    <h3 id="projects" style="padding-top: 80px; margin-top: -50px;">Projects</h3><hr>
+    <h3 id="software" style="padding-top: 80px; margin-top: -50px;">Software</h3><hr>
 
     <!-- Item -->
     <div class="row">
@@ -136,7 +134,7 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">PlotNet: a Python toolbox for interactive visualization of neural networks</font>
+          <font color="black">PlotNet: a Python Toolbox for Interactive Visualization of Neural Networks</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
         and <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a><br>
@@ -151,7 +149,7 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">Deep learning based GUI for bird detection in drone images</font>
+          <font color="black">Deep Learning Based GUI for Bird Detection in Drone Images</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>, Ben Daecher, Jose Mata, and Jiehui Li<br>
         <a href="https://www.dropbox.com/scl/fi/l5bz5g3c5wfb1q526vpzt/final-report.pdf?rlkey=pmu8h8meilxng4eseld5715p9&dl=0" target="_blank"> <small>[Report]</small></a>
