--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">PlotNet: a Python Toolbox for Interactive Visualization of Neural Networks</font>
+          <font color="black">PlotNet: A Python Toolbox for Interactive Visualization of Neural Networks</font>
         </b><br>
         <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
         and <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a><br>
