--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="col-md-5" , style="padding-top: 25px">
         <h2>Zeyu Yang</h2>
         <p>
-          Master student <br>
-          Rice CS <br>
+          PhD student <br>
+          Rice ECE <br>
           Computational Wellbeing Group <br>
           Email: zy45 [at] rice (dot) edu <br>
           <a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en" target="_blank">Google Scholar</a> /
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="col-md-12" style="padding-top: 25px;">
         <p>
-          Zeyu Yang earned his master of data science degree from Rice University in 2023 under the mentorship  of
+          Zeyu Yang is a PhD student at Rice University. He earned his master of data science degree from Rice University in 2023 under the mentorship  of
           Professor <a href="https://akanesano.rice.edu/" target="_blank">Akane Sano</a>
           and Professor <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
           interest is machine learning with a focus on digital health. During his
@@ -93,13 +93,13 @@
         <b>
           <font color="black">Balanced Mixed-Type Tabular Data Synthesis with Diffusion Models</font>
         </b><br>
-        <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>,
+        <a href="#home"><u><b>Zeyu Yang</b></u></a>,
         <a href="https://www.linkedin.com/in/peikun-guo-2b911812b" target="_blank"> Peikun Guo </a>,
         <a href="https://scholar.google.com/citations?user=T7hl27wAAAAJ&hl=en" target="_blank">Khadija Zanna</a>,
         and
         <a href="https://akanesano.rice.edu" target="_blank">Akane Sano</a><br>
-        In prepration <br>
-        <a href="https://zeyuyang8.github.io/comp-fair/" target="_blank"> <small>[Website]</small></a>
+        Submitted to ICML <br>
+        <a href="https://zeyuyang8.github.io/fair-tab-diffusion/" target="_blank"> <small>[Website]</small></a>
       </div>
     </div><hr>
 
@@ -113,7 +113,7 @@
           <font color="black">Network-Aware Asynchronous Distributed ADMM Algorithm for Smart Home Peer-to-Peer Energy
             Trading</font>
         </b><br>
-        <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
+        <a href="#home"><u><b>Zeyu Yang</b></u></a>
         and
         <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a><br>
         Preprint (submitted to IEEE Sensors Journal) <br>
@@ -136,7 +136,7 @@
         <b>
           <font color="black">PlotNet: A Python Toolbox for Interactive Visualization of Neural Networks</font>
         </b><br>
-        <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>
+        <a href="#home"><u><b>Zeyu Yang</b></u></a>
         and <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a><br>
         <a href="https://github.com/zeyuyang8/plotnet" target="_blank"> <small>[Code]</small></a>
       </div>
@@ -151,7 +151,7 @@
         <b>
           <font color="black">Deep Learning Based GUI for Bird Detection in Drone Images</font>
         </b><br>
-        <a href="https://zeyuyang8.github.io/" target="_blank"><u><b>Zeyu Yang</b></u></a>, Ben Daecher, Jose Mata, and Jiehui Li<br>
+        <a href="#home"><u><b>Zeyu Yang</b></u></a>, Ben Daecher, Jose Mata, and Jiehui Li<br>
         <a href="https://www.dropbox.com/scl/fi/l5bz5g3c5wfb1q526vpzt/final-report.pdf?rlkey=pmu8h8meilxng4eseld5715p9&dl=0" target="_blank"> <small>[Report]</small></a>
         <a href="https://github.com/RiceD2KLab/Audubon_F21/tree/avialert" target="_blank"> <small>[Code]</small></a>
         <a href="https://www.youtube.com/watch?v=F8dXLRTGEYQ" target="_blank"> <small>[Video]</small></a>
