--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a href="#home"><u><b>Zeyu Yang</b></u></a>
         and
         <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a><br>
-        Preprint (submitted to IEEE Sensors Journal) <br>
+        Preprint <br>
         <a href="https://arxiv.org/abs/2312.06976" target="_blank"> <small>[Paper]</small></a>
       </div>
     </div><hr>
