--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <div class="row">
       <div class="col-md-12" style="padding-top: 25px;">
         <p>
-          Zeyu Yang is a PhD student at Rice University. He earned his master of data science degree from Rice University in 2023 under the mentorship  of
+          Zeyu Yang is an incoming PhD student at Rice University. He earned his master of data science degree from Rice University in 2023 under the mentorship  of
           Professor <a href="https://akanesano.rice.edu/" target="_blank">Akane Sano</a>
           and Professor <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
-          interest is machine learning with a focus on digital health. During his
+          interest is machine learning with a focus on generative modeling and multimodal learning. During his
           undergraduate, he worked closely with Professor <a href="https://research.monash.edu/en/persons/hao-wang" target="_blank">Hao Wang</a> 
           in optimization and energy systems.
         </p>
@@ -98,8 +98,8 @@
         <a href="https://scholar.google.com/citations?user=T7hl27wAAAAJ&hl=en" target="_blank">Khadija Zanna</a>,
         and
         <a href="https://akanesano.rice.edu" target="_blank">Akane Sano</a><br>
-        Submitted to ICML <br>
-        <a href="https://zeyuyang8.github.io/fair-tab-diffusion/" target="_blank"> <small>[Website]</small></a>
+        Preprint <br>
+        <a href="https://arxiv.org/abs/2404.08254" target="_blank"> <small>[Paper]</small></a>
       </div>
     </div><hr>
 
