--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
     <!-- Item -->
     <div class="row">
       <div class="col-md-3">
+        <img src="materials/pictures/bhi_model.png" alt="bhi" width="100%" height="150px">
+      </div>
+      <div class="col-md-9">
+        <b>
+          <font color="black">Contrastive Pretraining for Stress Detection with Multimodal Wearable Sensor Data and Surveyss</font>
+        </b><br>
+        <a href="#home"><u><b>Zeyu Yang</b></u></a>,
+        <a href="https://scholar.google.com/citations?user=jcyVhlwAAAAJ&hl=zh-CN" target="_blank"> Han Yu </a>,
+        <a href="https://akanesano.rice.edu" target="_blank">Akane Sano</a><br>
+        Submitted to BHI <br>
+        <a href="https://github.com/zeyuyang8/bind" target="_blank"> <small>[Code]</small></a>
+      </div>
+    </div><hr>
+
+    <!-- Item -->
+    <div class="row">
+      <div class="col-md-3">
         <img src="materials/pictures/admm.png" alt="admm" width="100%" height="150px">
       </div>
       <div class="col-md-9">
