--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
           Email: zy45 [at] rice (dot) edu <br>
           <a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en" target="_blank">Google Scholar</a> /
           <a href="https://github.com/zeyuyang8" target="_blank">GitHub</a> /
-          <a href="https://twitter.com/YangZeyu9" target="_blank">Twitter</a>
+          <a href="https://twitter.com/YangZeyu9" target="_blank">Twitter</a> /
+          <a href="https://www.linkedin.com/in/zeyu-dennis-yang/" target="_blank">LinkedIn</a> /
+          <!-- CV -->
+          <a href="materials/files/cv.pdf" target="_blank">CV</a>
         </p>
       </div>
     </div>
