--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="col-md-5" , style="padding-top: 25px">
         <h2>Zeyu Yang</h2>
         <p>
-          PhD student <br>
+          PhD Student <br>
           Rice ECE <br>
           Computational Wellbeing Group <br>
           Email: zy45 [at] rice (dot) edu <br>
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="col-md-12" style="padding-top: 25px;">
         <p>
-          Zeyu Yang is an incoming PhD student at Rice University. He earned his master of data science degree from Rice University in 2023 under the mentorship  of
+          Zeyu Yang is a PhD student in Electrical and Computer Engineering at Rice University. He earned his master of data science degree from Rice University in 2023 under the mentorship  of
           Professor <a href="https://akanesano.rice.edu/" target="_blank">Akane Sano</a>
           and Professor <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Joe Warren</a>. His main area of research
           interest is machine learning with a focus on generative modeling and multimodal learning. During his
