--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
   <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
     <h3 id="honors" style="padding-top: 80px; margin-top: -50px;">Selected Honors</h3>
     <ul>
-      <li>Outstanding Student Award - University of Electronic Science and Technology of China, 2021</li>
-      <li>Meritorious Winner of Interdisciplinary Contest in Modeling - Consortium for Mathematics and Its Applications,
+      <li>Outstanding Student Award, University of Electronic Science and Technology of China, 2021</li>
+      <li>Meritorious Winner of Interdisciplinary Contest in Modeling, Consortium for Mathematics and Its Applications,
         2020</li>
     </ul>
   </div>
