--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       <div class="col-md-9">
         <b>
-          <font color="black">Contrastive Pretraining for Stress Detection with Multimodal Wearable Sensor Data and Surveyss</font>
+          <font color="black">Contrastive Pretraining for Stress Detection with Multimodal Wearable Sensor Data and Surveys</font>
         </b><br>
         <a href="#home"><u><b>Zeyu Yang</b></u></a>,
         <a href="https://scholar.google.com/citations?user=jcyVhlwAAAAJ&hl=zh-CN" target="_blank"> Han Yu</a>,
