--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <a href="https://twitter.com/YangZeyu9" target="_blank">Twitter</a> /
           <a href="https://www.linkedin.com/in/zeyu-dennis-yang/" target="_blank">LinkedIn</a> /
           <!-- CV -->
-          <a href="materials/files/cv.pdf" target="_blank">CV</a>
+          <a href="cv/main.pdf" target="_blank">CV</a>
         </p>
       </div>
     </div>
@@ -73,7 +73,7 @@
       <div class="col-md-12" style="padding-top: 25px;">
         <p>
           Zeyu Yang is a PhD student in Electrical and Computer Engineering at Rice University under the supervision of Dr. <a href="https://www.cs.rice.edu/~as143/" target="_blank">Anshumali Shrivastava</a>. His main area of research
-          interest is machine learning with a focus on efficient large-scale models.
+          interest is large scale machine learning and generative modeling.
         </p>
       </div>
     </div>
@@ -151,7 +151,8 @@
   <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
     <h3 id="honors" style="padding-top: 80px; margin-top: -50px;">Selected Honors</h3>
     <ul>
-      <li>Outstanding Undergraduate Student at the University of Electronic Science and Technology of China, 2021</li>
+      <li>Outstanding Undergraduate Student Award, 2021</li>
+      <li>Meritorious Winner of Interdisciplinary Contest in Modeling, 2020</li>
     </ul>
   </div>
 
