--- a/index.html
+++ b/index.html
@@ -91,12 +91,16 @@
         <img src="materials/pictures/ddpm.jpg" alt="ddpm" style="width: 100%; height: auto; object-fit: contain;">
       </div>
       <div class="col-md-8">
-        <b>
+        <!-- <b>
           <font color="black">Balanced Mixed-Type Tabular Data Synthesis with Diffusion Models</font>
-        </b><br>
-        <b>Zeyu Yang</b>, Han Yu, Peikun Guo, Khadija Zanna, Xiaoxue Yang, Akane Sano<br>
-        TMLR <br>
-        <a href="https://arxiv.org/abs/2404.08254" target="_blank"> <small>[Paper]</small></a>
+        </b><br> -->
+        <a href="https://arxiv.org/abs/2404.08254" target="_blank">
+          Balanced Mixed-Type Tabular Data Synthesis with Diffusion Models
+        </a><br>
+        <!-- font color gray -->
+        <b>Zeyu Yang</b>, <font color="gray">Han Yu, Peikun Guo, Khadija Zanna, Xiaoxue Yang, Akane Sano</font><br>
+        Transactions on Machine Learning Research (TMLR), 2025 <br>
+        <a href="https://openreview.net/forum?id=dvRysCqmYQ" target="_blank"> <small>[OpenReview]</small></a>
       </div>
     </div><hr>
   
@@ -112,11 +116,11 @@
         <img src="materials/pictures/plotnet.png" style="width: 100%; height: auto; object-fit: contain;">
       </div>
       <div class="col-md-8">
-        <b>
-          <font color="black">PlotNet: A Python Toolbox for Interactive Visualization of Neural Networks</font>
-        </b><br>
-        <b>Zeyu Yang</b> and Joe Warren<br>
-        <a href="https://github.com/zeyuyang8/plotnet" target="_blank"> <small>[Code]</small></a>
+        <a href="https://github.com/zeyuyang8/plotnet" target="_blank">
+          PlotNet: A Python Toolbox for Interactive Visualization of Neural Networks
+        </a><br>
+        <b>Zeyu Yang</b> <font color="gray">and Joe Warren</font><br>
+        <a href="https://github.com/zeyuyang8/plotnet" target="_blank"> <small>[GitHub]</small></a>
       </div>
     </div><hr>
 
