--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div class="row">
       <div class="col-md-12" style="padding-top: 25px;">
         <p>
-          Zeyu Yang is a PhD student in Electrical and Computer Engineering at Rice University under the supervision of Dr. <a href="https://www.cs.rice.edu/~as143/" target="_blank">Anshumali Shrivastava</a>. His main area of research
-          interest is large scale machine learning and generative modeling.
+          Zeyu Yang is a second year PhD student in Electrical and Computer Engineering at Rice University, where he is fortunate to work under the supervision of Dr. <a href="https://www.cs.rice.edu/~as143/" target="_blank">Anshumali Shrivastava</a>. His main area of research
+          interest is building efficient AI systems, including techniques such as quantization, parameter-efficient fine-tuning, and lossless compression via entropy coding. 
         </p>
       </div>
     </div>
